fix navigation on firefox

--- a/style.css
+++ b/style.css
@@ -719,7 +719,8 @@ body.woocommerce div.product .woocommerce-tabs .panel, body.woocommerce #content
 	outline: 1px solid #d7d7d7;
 	position: relative;
 	bottom: -30px;
-	z-index: 5;}
+	z-index: 5;
+	overflow: hidden; }
 
 .nav li { position: relative; }
 .nav li ul { position: absolute; top: 52px; left: -27px; padding: 20px; }
